--- a/MVC/WebApplication/Views/Products/Index.cshtml
+++ b/MVC/WebApplication/Views/Products/Index.cshtml
@@ -1,5 +1,44 @@
-﻿@*
-    For more information on enabling MVC for empty projects, visit https://go.microsoft.com/fwlink/?LinkID=397860
-*@
+﻿@model List<ProductViewModel>
 @{
+    ViewData["Title"] = "Products Page";
 }
+
+
+<div class="text-center">
+    <h1 class="display-4">Products</h1>  
+</div>
+<div>
+    <table class="table">
+        <thead>
+            <tr>
+                <th>ID</th>
+                <th>Name</th>
+                <th>Category</th>
+                <th>Supplier</th>
+                <th>Discontinued</th>
+                <th>Quantity Per Unit</th>
+                <th>Units In Stock</th>
+                <th>Unit Price</th>
+                <th>Units On Order</th>
+                <th>Reorder Level</th>
+            </tr>
+        </thead>
+        <tbody>
+            @foreach(var product in @Model)
+            {
+                <tr>
+                    <td> @product.ProductID </td>
+                    <td> @product.ProductName </td>
+                    <td> @product.CategoryName </td>
+                    <td> @product.SupplierName </td>
+                    <td> @product.Discontinued </td>
+                    <td> @product.QuantityPerUnit </td>
+                    <td> @product.UnitsInStock </td>
+                    <td> @product.UnitPrice </td>
+                    <td> @product.UnitsOnOrder </td>
+                    <td> @product.ReorderLevel </td>
+                </tr>
+            }   
+        </tbody>
+    </table>
+</div>
